--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <title>Aray</title>
   </head>
-  <body class="h-screen w-screen background-home">
+  <body class="h-full w-full background-home">
     <div class="md:h-10 w-10 bg-black"></div>
   </body>
 </html>
