remove black square

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="media/Logo_BlackBG.png"
+    />
     <title>Aray</title>
   </head>
-  <body class="h-full w-full background-home">
-    <div class="md:h-10 w-10 bg-black"></div>
-  </body>
+  <body class="h-full w-full background-home"></body>
 </html>
