--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     />
     <title>Aray</title>
   </head>
-  <body class="h-full w-full background-home"></body>
+  <body class="h-full w-full background-home">
+    <div class="relative w-full h-full">
+      <div class="absolute bottom-5 right-10">
+        <a href="https://twitter.com/ARAY_nft">
+          <img
+            src="media/tw-logo.png"
+            alt=""
+            class="h-20 w-20 animate-bounce"
+          />
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
